--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -7,9 +7,18 @@
     android:gravity="center"
     android:orientation="vertical"
     android:padding="50dp"
-    tools:context=".AddTaskActivity">
 
-    <com.google.android.material.textfield.TextInputLayout
+    tools:context=".AddTaskActivity">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+>
+        <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tlTitle"
         app:hintEnabled="false"
         android:layout_width="match_parent"
@@ -91,6 +100,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:layout_gravity="center"
         android:text="@string/add_task_button"
         app:layout_constraintTop_toBottomOf="@+id/desc_at" />
+</LinearLayout>
+    </ScrollView>
 </LinearLayout>
