--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -8,6 +8,14 @@
     android:gravity="center"
     android:padding="30dp"
     tools:context="TaskDetailFragment">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tlTitle"
@@ -102,7 +110,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
-        android:text="@string/update_btn" />
+        android:text="@string/update_btn"
+        android:layout_gravity="center" />
 
     <Button
         android:id="@+id/buttonDelete"
@@ -111,5 +120,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:text="@string/delete_btn" />
+        android:text="@string/delete_btn"
+         android:layout_gravity="center"/>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
